core/b2b/core-services/zabbix/zabbix-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-server
  namespace: zabbix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-server
  template:
    metadata:
      labels:
        app: zabbix-server
    spec:
      serviceAccountName: zabbix-service-account
      nodeSelector:
        node-role.kubernetes.io/control-plane: ""
      containers:
        - name: zabbix-server
          image: zabbix/zabbix-server-pgsql:latest
          ports:
            - containerPort: 10051
          volumeMounts:
            - name: zabbix-server-data
              mountPath: /var/lib/zabbix
            - name: external-scripts
              mountPath: /usr/lib/zabbix/externalscripts
      volumes:
        - name: zabbix-server-data
          persistentVolumeClaim:
            claimName: zabbix-server-pvc
        - name: external-scripts
          configMap:
            name: zabbix-github-plugin
            defaultMode: 0755
