core/b2b/core-services/zabbix/zabbix-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-web
  namespace: zabbix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-web
  template:
    metadata:
      labels:
        app: zabbix-web
    spec:
      containers:
        - name: zabbix-web
          image: zabbix/zabbix-web-nginx-pgsql:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          volumeMounts:
            - name: zabbix-web-root
              mountPath: /usr/share/zabbix
      volumes:
        - name: zabbix-web-root
          emptyDir: {}
        - name: zabbix-web-branding
          configMap:
            name: zabbix-web-branding
