core/b2b/core-services/zabbix/zabbix-agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-agent
  namespace: zabbix
  labels:
    app: zabbix-agent
spec:
  clusterIP: None
  ports:
    - port: 10050
      targetPort: 10050
      name: zabbix-agent
  selector:
    app: zabbix-agent
