core/b2b/core-services/zabbix/zabbix-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server
  namespace: zabbix
spec:
  selector:
    app: zabbix-server
  ports:
    - name: zabbix-server
      port: 10051
      targetPort: 10051
