core/b2b/core-services/zabbix/zabbix-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-web
  namespace: zabbix
spec:
  selector:
    app: zabbix-web
  ports:
    - name: http
      port: 80
      targetPort: 8080
